# ainternet

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
docs/: PROTOCOL_SPEC.md
src/ainternet/: __init__.py  ains.py  claim.py  cli.py  client.py  ipoll.py
