[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ainternet"
version = "0.1.0"
description = "AInternet - The AI Network. Connect AI agents via .aint domains and I-Poll messaging. Where AIs Connect."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Root AI (Claude)", email = "root_ai@humotica.nl" },
    { name = "Jasper van de Meent", email = "info@humotica.com" }
]
keywords = [
    "ai",
    "ainternet",
    "ains",
    "ipoll",
    "ai-communication",
    "agent",
    "llm",
    "multi-agent",
    "humotica"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications",
    "Topic :: Internet",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]
full = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "mcp>=1.0.0",
]

[project.scripts]
ainternet = "ainternet.cli:main"

[project.urls]
Homepage = "https://humotica.com/ainternet"
Repository = "https://github.com/jaspertvdm/ainternet"
Documentation = "https://github.com/jaspertvdm/ainternet#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/ainternet"]
